[project]
name = "grokzhuce"
version = "0.1.0"
description = "Batch Grok registration utility with local Turnstile solver"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "curl_cffi==0.14.0",
    "patchright==1.58.0",
    "python-dotenv==1.2.1",
    "quart==0.20.0",
    "requests==2.32.5",
    "rich==14.3.3",
]

[tool.ruff]
line-length = 120
target-version = "py310"
